--- a/buefy-0.9.6/utils/_variables.scss
+++ b/buefy-0.9.6/utils/_variables.scss
@@ -14,3 +14,5 @@ $link-visited: $grey !default;
 $link-focus-border: $primary !default;
 
 $label-weight: $weight-semibold !default;
+
+@import "../../customize/variables";
