--- a/bulma-0.9.2/form/_shared.scss
+++ b/bulma-0.9.2/form/_shared.scss
@@ -30,6 +30,8 @@ $input-icon-active-color: $text !default;
 
 $input-radius: $radius !default;
 
+@import "../../customize/variables";
+
 @mixin input {
   @extend %control;
 
