--- a/bulma-0.9.2/form/_tools.scss
+++ b/bulma-0.9.2/form/_tools.scss
@@ -5,6 +5,8 @@ $help-size: $size-small !default;
 
 $label-colors: $form-colors !default;
 
+@import "../../customize/variables";
+
 .label {
   color: $label-color;
   display: block;
