--- a/build.scss
+++ b/build.scss
@@ -1,13 +1,8 @@
 @import "./bulma-0.9.2/utilities/functions";
-@import "./customize/bulma/all";
-
-//@import "./buefy-0.9.6/utils/_all"; replacing this
-@import "./buefy-0.9.6/utils/_functions.scss";
-@import "./customize/buefy/_variables.scss";
-@import "./buefy-0.9.6/utils/_helpers.scss";
-@import "./buefy-0.9.6/utils/_animations.scss";
-
-
+@import "./bulma-0.9.2/utilities/initial-variables";
+@import "./buefy-0.9.6/utils/_all";
 @import "./bulma-0.9.2/bulma";
 @import "./buefy-0.9.6/utils/variables-ext";
 @import "./buefy-0.9.6/buefy";
+
+@import "./bulma-helpers/bulma-helpers";
