--- a/bulma-0.9.2/components/_media.scss
+++ b/bulma-0.9.2/components/_media.scss
@@ -9,6 +9,9 @@ $media-level-1-spacing: 0.75rem !default;
 $media-level-1-content-spacing: 0.5rem !default;
 $media-level-2-spacing: 0.5rem !default;
 
+@import "../../customize/variables";
+
+
 .media {
   align-items: flex-start;
   display: flex;
