--- a/bulma-0.9.2/components/_pagination.scss
+++ b/bulma-0.9.2/components/_pagination.scss
@@ -35,6 +35,8 @@ $pagination-ellipsis-color: $grey-light !default;
 
 $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default;
 
+@import "../../customize/variables";
+
 .pagination {
   @extend %block;
 
