--- a/bulma-0.9.2/components/_tabs.scss
+++ b/bulma-0.9.2/components/_tabs.scss
@@ -28,6 +28,8 @@ $tabs-toggle-link-active-background-color: $link !default;
 $tabs-toggle-link-active-border-color: $link !default;
 $tabs-toggle-link-active-color: $link-invert !default;
 
+@import "../../customize/variables";
+
 .tabs {
   @extend %block;
 
