--- a/bulma-0.9.2/elements/_box.scss
+++ b/bulma-0.9.2/elements/_box.scss
@@ -9,6 +9,8 @@ $box-padding: 1.25rem !default;
 $box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1px $link !default;
 $box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link !default;
 
+@import "../../customize/variables";
+
 .box {
   @extend %block;
 
