--- a/bulma-0.9.2/elements/_content.scss
+++ b/bulma-0.9.2/elements/_content.scss
@@ -19,6 +19,8 @@ $content-table-head-cell-color: $text-strong !default;
 $content-table-foot-cell-border-width: 2px 0 0 !default;
 $content-table-foot-cell-color: $text-strong !default;
 
+@import "../../customize/variables";
+
 .content {
   @extend %block;
 
