--- a/bulma-0.9.2/elements/_image.scss
+++ b/bulma-0.9.2/elements/_image.scss
@@ -2,6 +2,8 @@
 
 $dimensions: 16 24 32 48 64 96 128 !default;
 
+@import "../../customize/variables";
+
 .image {
   display: block;
   position: relative;
