--- a/bulma-0.9.2/elements/_tag.scss
+++ b/bulma-0.9.2/elements/_tag.scss
@@ -7,6 +7,8 @@ $tag-delete-margin: 1px !default;
 
 $tag-colors: $colors !default;
 
+@import "../../customize/variables";
+
 .tags {
   align-items: center;
   display: flex;
