--- a/bulma-0.9.2/elements/_title.scss
+++ b/bulma-0.9.2/elements/_title.scss
@@ -19,6 +19,8 @@ $subtitle-strong-color: $text-strong !default;
 $subtitle-strong-weight: $weight-semibold !default;
 $subtitle-negative-margin: -1.25rem !default;
 
+@import "../../customize/variables";
+
 .title,
 .subtitle {
   @extend %block;
