--- a/bulma-0.9.2/form/_input-textarea.scss
+++ b/bulma-0.9.2/form/_input-textarea.scss
@@ -4,6 +4,8 @@ $textarea-min-height: 8em !default;
 
 $textarea-colors: $form-colors !default;
 
+@import "../../customize/variables";
+
 %input-textarea {
   @extend %input;
 
