updated: newer version

--- a/customize/variables.scss
+++ b/customize/variables.scss
@@ -1,437 +1,10 @@
-//=======[ bulma-0.9.3 ]
-//-------[ _initial-variables ]
-// Colors
+$primary: hsl(229, 77%, 61%) !default; // #4E6AE8
 
-$black: hsl(0, 0%, 4%) !default;
-$black-bis: hsl(0, 0%, 7%) !default;
-$black-ter: hsl(0, 0%, 14%) !default;
+$success: hsl(101, 67%, 54%) !default; // #6ED83C
+$info: 	hsl(202, 89%, 60%) !default; // #3DB1F4
+$warning: hsl(51, 97%, 62%) !default; // #FCE041
+$danger: hsl(15, 100%, 58%) !default; // #FF5E28
 
-$grey-darker: hsl(0, 0%, 21%) !default;
-$grey-dark: hsl(0, 0%, 29%) !default;
-$grey: hsl(0, 0%, 48%) !default;
-$grey-light: hsl(0, 0%, 71%) !default;
-$grey-lighter: hsl(0, 0%, 86%) !default;
-$grey-lightest: hsl(0, 0%, 93%) !default;
+@import "./bulma";
+@import "./buefy";
 
-$white-ter: hsl(0, 0%, 96%) !default;
-$white-bis: hsl(0, 0%, 98%) !default;
-$white: hsl(0, 0%, 100%) !default;
-
-$orange: hsl(14, 100%, 53%) !default;
-$yellow: hsl(44, 100%, 77%) !default;
-$green: hsl(153, 53%, 53%) !default;
-$turquoise: hsl(171, 100%, 41%) !default;
-$cyan: hsl(207, 61%, 53%) !default;
-$blue: hsl(229, 53%, 53%) !default;
-$purple: hsl(271, 100%, 71%) !default;
-$red: hsl(348, 86%, 61%) !default;
-
-// Typography
-
-$family-sans-serif: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !default;
-$family-monospace: monospace !default;
-$render-mode: optimizeLegibility !default;
-
-$size-1: 3rem !default;
-$size-2: 2.5rem !default;
-$size-3: 2rem !default;
-$size-4: 1.5rem !default;
-$size-5: 1.25rem !default;
-$size-6: 1rem !default;
-$size-7: 0.75rem !default;
-
-$weight-light: 300 !default;
-$weight-normal: 400 !default;
-$weight-medium: 500 !default;
-$weight-semibold: 600 !default;
-$weight-bold: 700 !default;
-
-// Spacing
-
-$block-spacing: 1.5rem !default;
-
-// Responsiveness
-
-// The container horizontal gap, which acts as the offset for breakpoints
-$gap: 32px !default;
-
-// 960, 1152, and 1344 have been chosen because they are divisible by both 12 and 16
-$tablet: 769px !default;
-
-// 960px container + 4rem
-$desktop: 960px + 2 * $gap !default;
-
-// 1152px container + 4rem
-$widescreen: 1152px + 2 * $gap !default;
-$widescreen-enabled: true !default;
-
-// 1344px container + 4rem
-$fullhd: 1344px + 2 * $gap !default;
-$fullhd-enabled: true !default;
-
-// Miscellaneous
-
-$easing: ease-out !default;
-$radius-small: 2px !default;
-$radius: 4px !default;
-$radius-large: 6px !default;
-$radius-rounded: 9999px !default;
-$speed: 86ms !default;
-
-// Flags
-
-$variable-columns: true !default;
-$rtl: false !default;
-
-//-------[ derived-variables ]
-
-$primary: $turquoise !default;
-
-$info: $cyan !default;
-$success: $green !default;
-$warning: $yellow !default;
-$danger: $red !default;
-
-$light: $white-ter !default;
-$dark: $grey-darker !default;
-
-// Invert colors
-
-$orange-invert: findColorInvert($orange) !default;
-$yellow-invert: findColorInvert($yellow) !default;
-$green-invert: findColorInvert($green) !default;
-$turquoise-invert: findColorInvert($turquoise) !default;
-$cyan-invert: findColorInvert($cyan) !default;
-$blue-invert: findColorInvert($blue) !default;
-$purple-invert: findColorInvert($purple) !default;
-$red-invert: findColorInvert($red) !default;
-
-$primary-invert: findColorInvert($primary) !default;
-$primary-light: findLightColor($primary) !default;
-$primary-dark: findDarkColor($primary) !default;
-$info-invert: findColorInvert($info) !default;
-$info-light: findLightColor($info) !default;
-$info-dark: findDarkColor($info) !default;
-$success-invert: findColorInvert($success) !default;
-$success-light: findLightColor($success) !default;
-$success-dark: findDarkColor($success) !default;
-$warning-invert: findColorInvert($warning) !default;
-$warning-light: findLightColor($warning) !default;
-$warning-dark: findDarkColor($warning) !default;
-$danger-invert: findColorInvert($danger) !default;
-$danger-light: findLightColor($danger) !default;
-$danger-dark: findDarkColor($danger) !default;
-$light-invert: findColorInvert($light) !default;
-$dark-invert: findColorInvert($dark) !default;
-
-// General colors
-
-$scheme-main: $white !default;
-$scheme-main-bis: $white-bis !default;
-$scheme-main-ter: $white-ter !default;
-$scheme-invert: $black !default;
-$scheme-invert-bis: $black-bis !default;
-$scheme-invert-ter: $black-ter !default;
-
-$background: $white-ter !default;
-
-$border: $grey-lighter !default;
-$border-hover: $grey-light !default;
-$border-light: $grey-lightest !default;
-$border-light-hover: $grey-light !default;
-
-// Text colors
-
-$text: $grey-dark !default;
-$text-invert: findColorInvert($text) !default;
-$text-light: $grey !default;
-$text-strong: $grey-darker !default;
-
-// Code colors
-
-$code: darken($red, 15%) !default;
-$code-background: $background !default;
-
-$pre: $text !default;
-$pre-background: $background !default;
-
-// Link colors
-
-$link: $blue !default;
-$link-invert: findColorInvert($link) !default;
-$link-light: findLightColor($link) !default;
-$link-dark: findDarkColor($link) !default;
-$link-visited: $purple !default;
-
-$link-hover: $grey-darker !default;
-$link-hover-border: $grey-light !default;
-
-$link-focus: $grey-darker !default;
-$link-focus-border: $blue !default;
-
-$link-active: $grey-darker !default;
-$link-active-border: $grey-dark !default;
-
-// Typography
-
-$family-primary: $family-sans-serif !default;
-$family-secondary: $family-sans-serif !default;
-$family-code: $family-monospace !default;
-
-$size-small: $size-7 !default;
-$size-normal: $size-6 !default;
-$size-medium: $size-5 !default;
-$size-large: $size-4 !default;
-
-// Effects
-
-$shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($scheme-invert, 0.02) !default;
-
-// Lists and maps
-$custom-colors: null !default;
-$custom-shades: null !default;
-
-$colors: mergeColorMaps(("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert, $primary-light, $primary-dark), "link": ($link, $link-invert, $link-light, $link-dark), "info": ($info, $info-invert, $info-light, $info-dark), "success": ($success, $success-invert, $success-light, $success-dark), "warning": ($warning, $warning-invert, $warning-light, $warning-dark), "danger": ($danger, $danger-invert, $danger-light, $danger-dark)), $custom-colors) !default;
-
-$shades: mergeColorMaps(("black-bis": $black-bis, "black-ter": $black-ter, "grey-darker": $grey-darker, "grey-dark": $grey-dark, "grey": $grey, "grey-light": $grey-light, "grey-lighter": $grey-lighter, "white-ter": $white-ter, "white-bis": $white-bis), $custom-shades) !default;
-
-$sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default;
-
-//=======[ buefy-0.9.19 ]
-
-//-------[ _variables ]
-$speed-slow: 150ms !default;
-$speed-slower: 250ms !default;
-
-$primary: #7957d5 !default;
-$primary-invert: findColorInvert(#7957d5) !default;
-$primary-light: findLightColor(#7957d5) !default;
-$primary-dark: findDarkColor(#7957d5) !default;
-
-$info: #167df0 !default;
-
-$link: $primary !default;
-$link-invert: $primary-invert !default;
-$link-visited: $grey !default;
-$link-focus-border: $primary !default;
-
-$label-weight: $weight-semibold !default;
-
-
-//-------[ _autocomplete ]
-$dropdown-content-max-height: 200px !default;
-
-//-------[ _carousel ]
-$carousel-min-height: 120px !default;
-
-$carousel-arrow-background: $scheme-main !default;
-$carousel-arrow-color: $primary !default;
-$carousel-arrow-icon-spaced: 1.5rem !default;
-$carousel-arrow-top: 50% !default;
-
-$carousel-indicator-background: rgba($scheme-invert, 0.50) !default;
-$carousel-indicator-border: $scheme-main !default;
-$carousel-indicator-color: $primary !default;
-$carousel-indicator-spaced: .5rem !default;
-
-$carousel-overlay-background: rgba($scheme-invert, 0.86) !default;
-$carousel-overlay-z: 40 !default;
-
-//-------[ _checkbox ]
-$checkbox-active-background-color: $primary !default;
-$checkbox-background-color: transparent !default;
-$checkbox-border-color: $grey !default;
-$checkbox-border-radius: $radius !default;
-$checkbox-border-width: 2px !default;
-$checkbox-checkmark-color: $primary-invert !default;
-$checkbox-size: 1.25em !default;
-$checkbox-colors: $form-colors !default;
-
-//-------[ _clockpicker ]
-$transition-swing: cubic-bezier(.25,.8,.50,1);
-
-$time-font-size: 60px;
-$period-font-size: 16px;
-$number-font-size: 18px;
-
-$indicator-size: 40px;
-$hand-endpoint-size: 12px;
-
-$padding-outer: 12px;
-$padding-inner: 5px;
-
-//-------[ _collapse ]
-
-//-------[ colorpicker ]
-$colorpicker-radius: $dropdown-content-radius !default;
-$colorpicker-hue-selected-stroke: $primary !default;
-
-//-------[ _datepicker ]
-$datepicker-background-color: $dropdown-content-background-color !default;
-$datepicker-radius: $dropdown-content-radius !default;
-$datepicker-shadow: $dropdown-content-shadow !default;
-$datepicker-header-color: $grey !default;
-$datepicker-today-border: solid 1px rgba($primary, 0.5) !default;
-$datepicker-item-color: $grey-dark !default;
-$datepicker-item-disabled-color: $grey-light !default;
-$datepicker-item-hover-color: $scheme-invert !default;
-$datepicker-item-hover-background-color: $background !default;
-$datepicker-item-selected-color: $primary-invert !default;
-$datepicker-item-selected-background-color: $primary !default;
-
-
-//-------[ _dropdown ]
-$dropdown-mobile-breakpoint: $desktop !default;
-$dropdown-background-color: rgba($scheme-invert, 0.86) !default;
-$dropdown-disabled-opacity: 0.5 !default;
-
-//-------[ _form ]
-$floating-in-height: 3.25em !default;
-
-
-//-------[ _icon ]
-$icon-svg-width: auto !default;
-$icon-svg-height: auto !default;
-
-
-//-------[ _image ]
-$image-placeholder-blur-enabled: true !default;
-$image-placeholder-blur: 10px !default;
-
-
-//-------[ _loading ]
-$loading-background-legacy: #7f7f7f !default;
-$loading-background: rgba(255,255,255,0.5) !default;
-$loading-icon-size: 3em !default;
-$loading-full-page-icon-size: 5em !default;
-
-
-//-------[ _menu ]
-//-------[ _message ]
-//-------[ _modal ]
-//-------[ _navbar ]
-
-//-------[ _notices ]
-$notices-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04) !default;
-
-$toast-border-radius: 2em !default;
-$toast-opacity: 0.92 !default;
-$toast-box-shadow: $notices-box-shadow !default;
-
-$snackbar-background-color: $dark !default;
-$snackbar-color: $dark-invert !default;
-$snackbar-border-radius: $radius !default;
-$snackbar-button-text-transform: uppercase !default;
-$snackbar-box-shadow: $notices-box-shadow !default;
-
-
-//-------[ _notification ]
-//-------[ _numberinput ]
-//-------[ _pagination ]
-//-------[ _progress ]
-
-//-------[ _radio ]
-$radio-active-background-color: $primary !default;
-$radio-size: 1.25em !default;
-$radio-colors: $form-colors !default;
-
-
-//-------[ _rate ]
-$rate-color: $grey-lighter !default;
-$rate-color-active: darken($warning, 5%) !default;
-$rate-spaced: 0.25rem !default;
-$rate-text-spaced: 0.35rem !default;
-
-
-//-------[ _select ]
-
-//-------[ _skeleton ]
-$skeleton-color: $grey-lighter !default;
-$skeleton-background: linear-gradient(90deg, $skeleton-color 25%, rgba($skeleton-color, 0.5) 50%, $skeleton-color 75%) !default;
-$skeleton-border-radius: $radius !default;
-$skeleton-duration: 1.5s !default;
-$skeleton-margin-top: .5rem !default;
-
-//-------[ _sidebar ]
-$sidebar-background: $modal-background-background-color !default;
-$sidebar-box-shadow: 5px 0px 13px 3px rgba($black, 0.1) !default;
-$sidebar-width: 260px !default;
-$sidebar-mobile-width: 80px !default;
-$sidebar-mobile-breakpoint: $tablet !default;
-$sidebar-colors: $navbar-colors !default;
-
-
-//-------[ _slider ]
-$slider-radius: $radius !default;
-$slider-track-background: $grey-lighter !default;
-$slider-track-radius: $radius !default;
-$slider-track-border: 0px solid $grey !default;
-$slider-track-shadow: 0px 0px 0px $grey !default;
-$slider-thumb-background: $scheme-main !default;
-$slider-thumb-radius: $radius !default;
-$slider-thumb-border: 1px solid $grey-light !default;
-$slider-thumb-shadow: none !default;
-$slider-thumb-to-track-ratio: 2 !default;
-$slider-tick-to-track-ratio: 0.5 !default;
-$slider-tick-width: 3px !default;
-$slider-tick-radius: $radius !default;
-$slider-tick-background: $grey-light !default;
-$slider-mark-size: 0.75rem !default;
-$slider-colors: $colors !default;
-
-//-------[ _steps ]
-$steps-items-focused-outline: none !default;
-$steps-details-background-color: $body-background-color !default;
-$steps-maker-default-color: $grey-light !default;
-$steps-marker-default-border: .2em solid #fff !default;
-$steps-default-color: $grey-lighter !default;
-$steps-previous-color: $primary !default;
-$steps-active-color: $primary !default;
-$steps-divider-height: .2em !default;
-$steps-vertical-padding: 1em 0 !default;
-$steps-mobile-max-width: $tablet !default;
-$steps-colors: $colors !default;
-
-//-------[ _switch ]
-$switch-width-number: 2.75 !default;
-$switch-width: $switch-width-number * 1em !default;
-$switch-padding: 0.2em !default;
-$switch-active-background-color: $primary !default;
-$switch-colors: $form-colors !default;
-
-//-------[ _table ]
-$table-sticky-header-height: 300px !default;
-
-//-------[ _tabs ]
-$tabs-focused-outline: none !default;
-$tabs-items-focused-outline: none !default;
-$tabs-link-focus-active-border-bottom-color: $tabs-link-active-border-bottom-color !default;
-$tabs-link-focus-border-bottom-color: $tabs-link-hover-border-bottom-color !default;
-$tabs-boxed-link-focus-active-background-color: $tabs-boxed-link-active-background-color !default;
-$tabs-boxed-link-focus-background-color: $tabs-boxed-link-hover-background-color !default;
-$tabs-boxed-link-focus-active-border-bottom-color: $tabs-boxed-link-active-border-bottom-color !default;
-$tabs-boxed-link-focus-border-bottom-color: $tabs-boxed-link-hover-border-bottom-color !default;
-$tabs-toggle-link-focus-active-background-color: $tabs-toggle-link-active-background-color !default;
-$tabs-toggle-link-focus-background-color: $tabs-toggle-link-hover-background-color !default;
-$tabs-toggle-link-focus-active-border-color: $tabs-toggle-link-active-border-color !default;
-$tabs-toggle-link-focus-border-color: $tabs-toggle-link-hover-border-color !default;
-
-
-//-------[ _tag ]
-
-//-------[ _taginput ]
-$taginput-height: calc(2em - 1px) !default;
-
-//-------[ _timepicker ]
-
-//-------[ _tooltip ]
-$tooltip-arrow-size: 5px !default;
-$tooltip-arrow-margin: 2px !default;
-$tooltip-multiline-sizes: (
-        small: 180px,
-        medium: 240px,
-        large: 300px
-) !default;
-$tooltip-colors: $colors !default;
-
-//-------[ _upload ]
